@startuml

skinparam classAttributeIconSize 0

class Logger {
    -print(String) : void
    +info(String) : void
    +warning(String) : void
    +alert(String) : void
}

class NetworkManager {
    -clients : Array of Threads

    -addClient() : Integer

}

class Controller {
    -id : Integer
    -name : String
}

class FileManager {

}

class DatabaseManager {

}

class PlaylistManager {
    -playlists : Array of playlists
}

class FavoriteManager {
    favorites : Map of track/favorites
}

class VoteManager {
    -votes : Map of track/votes
}

class Playlist {
    -id : Integer
    -name : String
    -tracks : Array of tracks
    -dateAdded : Timestamp
    -datePlayed : Timestamp
}

class Player {
    +play(Track) : void
    +stop() : void
    +pause() : void
}

class Track {
    -id : Integer
    -title : String
    -artist : String
    -album : String
    -length : Duration
    -uri : String
    -dateAdded : Timestamp
    -datePlayed : Timestamp
}

NetworkManager -- Controller

Controller -- FileManager
Controller -- DatabaseManager
Controller -- PlaylistManager

PlaylistManager -- FavoriteManager
PlaylistManager -- VoteManager
PlaylistManager -- Playlist

Playlist -- Player
Playlist -- Track

note left of Logger
    Permet de logger
    les activités du
    programme
endnote

note left of NetworkManager
    Communication entre
    le serveur et le client
endnote

note left of Controller
    "Routeur" qui rédirige
    les demandes du client
endnote

note  right of Controller
    Le client demande une requête au servuer. Si une requête n'a
    pas de correspondance avec une classe/méthode, le serveur
    renvoie une erreur.
    Exemple:
    192.168.1.45:4004/PlaylistManager/VoteManager/upvote/1302
    Le controlleur demande au PlaylistManager s'il a la méthode
    VoteManager(). Le PlaylistManager n'a pas cette fonction,
    mais a la classe VoteManager et renvoie la requête à cette
    dernière. Elle demande si la méthode 'upvote()' existe.
    Si c'est le cas, on appelle cette fonction en passant l'id
    '1302' en paramètre à la fonction. Son résultat est retourné
    jusqu'au contrôleur qui renverra au client le résultat
endnote

note left of FileManager
    Gestionnaire de
    fichiers au niveau
    du système hôte
endnote

note left of DatabaseManager
    Interraction avec
    la base de données
endnote

note left of PlaylistManager
    Gestionnaire
    de playlists
endnote

note left of FavoriteManager
    Gestionnaire
    de favoris
endnote

note left of VoteManager
    Gestionnaire
    de votes
endnote

note left of Playlist
    Abstraction
    d'une playlist
endnote

note left of Player
    Lecture
    de musique
endnote

note left of Track
    Abstraction
    d'une chanson
endnote

@enduml
